# launch_frontend_py

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.github/workflows/: build.yml
launch_frontend_py/: __init__.py  actions.py  entity.py  mypy.ini  util.py
launch_py/: __init__.py  actions.py  entity.py  mypy.ini
test/: basic_launch.py  include_launch.py  test_action_list_preseed.py  test_dynamic_attrs.py  test_entity.py  test_frontend.py
test/launch/: basic_launch.py  include_launch.py
