<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_frontend_py</name>
  <version>0.1.0</version>
  <description>Python frontend for writing ROS 2 launch files</description>
  <maintainer email="me@emersonknapp.com">Emerson Knapp</maintainer>
  <license>Apache License 2.0</license>
  <author email="me@emersonknapp.com">Emerson Knapp</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>launch</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_mypy</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <member_of_group>launch_frontend_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
